fix error for production

--- a/src/app/components/roles/roles.component.html
+++ b/src/app/components/roles/roles.component.html
@@ -38,7 +38,7 @@
             </tbody>
           </table>
           <div class="col-12 justify-content-center" style="display: flex !important; justify-content: center !important;">
-            <ngb-pagination [(collectionSize)]="pagination.max" (pageChange)="paginateClick($event)" [(page)]="pagination.page" (onclick)="paginateClick()"></ngb-pagination>
+            <ngb-pagination [(collectionSize)]="pagination.max" (pageChange)="paginateClick($event)" [(page)]="pagination.page" ></ngb-pagination>
           </div>
         </div>
 
