--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.css';
 @import '../node_modules/ng-snotify/styles/material.css';
+@import "../node_modules/angular-calendar/css/angular-calendar.css";
 
 .modal {
   overflow-y: scroll;
