--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+<!-- <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
   <button class="btn btn-default navbar-btn yay-toggle navbar-toggler" *ngIf="loggedIn" (click)='toggle()' type="button" style="display: inline!important; margin-right: 10px!important"><i class="fa fa-bars"></i></button>
   <a class="navbar-brand" routerLink="" *ngIf="!loggedIn">EMS</a>
   <a class="navbar-brand" routerLink="dashboard" *ngIf="loggedIn">EMS</a>
@@ -15,7 +15,7 @@
       <a class="text-white" href="javascript:void(0)" (click)="logout($event)" style="padding-right: 20px;" *ngIf="loggedIn">Logout</a>
     </form>
   </div>
-</nav>
+</nav> -->
 
 <!--
 
