--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -46,7 +46,7 @@
                       <i class="ti-bell font-20"></i>
 
                   </a>
-                  <div class="dropdown-menu mailbox animated bounceInDown">
+                  <div class="dropdown-menu dropdown-menu-right mailbox animated bounceInDown">
                       <span class="with-arrow">
                           <span class="bg-primary"></span>
                       </span>
@@ -59,6 +59,8 @@
                           </li>
                           <li>
                               <div class="message-center notifications">
+
+
                                   <!-- Message -->
                                   <a href="javascript:void(0)" class="message-item">
                                       <span class="btn btn-danger btn-circle">
@@ -70,39 +72,7 @@
                                           <span class="time">9:30 AM</span>
                                       </div>
                                   </a>
-                                  <!-- Message -->
-                                  <a href="javascript:void(0)" class="message-item">
-                                      <span class="btn btn-success btn-circle">
-                                          <i class="ti-calendar"></i>
-                                      </span>
-                                      <div class="mail-contnet">
-                                          <h5 class="message-title">Event today</h5>
-                                          <span class="mail-desc">Just a reminder that you have event</span>
-                                          <span class="time">9:10 AM</span>
-                                      </div>
-                                  </a>
-                                  <!-- Message -->
-                                  <a href="javascript:void(0)" class="message-item">
-                                      <span class="btn btn-info btn-circle">
-                                          <i class="ti-settings"></i>
-                                      </span>
-                                      <div class="mail-contnet">
-                                          <h5 class="message-title">Settings</h5>
-                                          <span class="mail-desc">You can customize this template as you want</span>
-                                          <span class="time">9:08 AM</span>
-                                      </div>
-                                  </a>
-                                  <!-- Message -->
-                                  <a href="javascript:void(0)" class="message-item">
-                                      <span class="btn btn-primary btn-circle">
-                                          <i class="ti-user"></i>
-                                      </span>
-                                      <div class="mail-contnet">
-                                          <h5 class="message-title">Pavan kumar</h5>
-                                          <span class="mail-desc">Just see the my admin!</span>
-                                          <span class="time">9:02 AM</span>
-                                      </div>
-                                  </a>
+
                               </div>
                           </li>
                           <li>
@@ -123,9 +93,8 @@
               <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle waves-effect waves-dark" style="color: #ddd;" href="" id="2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <i class="font-20 ti-email"></i>
-
                   </a>
-                  <div class="dropdown-menu mailbox animated bounceInDown" aria-labelledby="2">
+                  <div class="dropdown-menu dropdown-menu-right mailbox animated bounceInDown" aria-labelledby="2">
                       <span class="with-arrow">
                           <span class="bg-danger"></span>
                       </span>
@@ -138,11 +107,12 @@
                           </li>
                           <li>
                               <div class="message-center message-body">
+
                                   <!-- Message -->
                                   <a href="javascript:void(0)" class="message-item">
                                       <span class="user-img">
                                           <img src="assets/images/users/1.jpg" alt="user" class="rounded-circle">
-                                          <span class="profile-status online pull-right"></span>
+                                          <span class="profile-status pull-right"></span>
                                       </span>
                                       <div class="mail-contnet">
                                           <h5 class="message-title">Pavan kumar</h5>
@@ -150,47 +120,12 @@
                                           <span class="time">9:30 AM</span>
                                       </div>
                                   </a>
-                                  <!-- Message -->
-                                  <a href="javascript:void(0)" class="message-item">
-                                      <span class="user-img">
-                                          <img src="assets/images/users/2.jpg" alt="user" class="rounded-circle">
-                                          <span class="profile-status busy pull-right"></span>
-                                      </span>
-                                      <div class="mail-contnet">
-                                          <h5 class="message-title">Sonu Nigam</h5>
-                                          <span class="mail-desc">I've sung a song! See you at</span>
-                                          <span class="time">9:10 AM</span>
-                                      </div>
-                                  </a>
-                                  <!-- Message -->
-                                  <a href="javascript:void(0)" class="message-item">
-                                      <span class="user-img">
-                                          <img src="assets/images/users/3.jpg" alt="user" class="rounded-circle">
-                                          <span class="profile-status away pull-right"></span>
-                                      </span>
-                                      <div class="mail-contnet">
-                                          <h5 class="message-title">Arijit Sinh</h5>
-                                          <span class="mail-desc">I am a singer!</span>
-                                          <span class="time">9:08 AM</span>
-                                      </div>
-                                  </a>
-                                  <!-- Message -->
-                                  <a href="javascript:void(0)" class="message-item">
-                                      <span class="user-img">
-                                          <img src="assets/images/users/4.jpg" alt="user" class="rounded-circle">
-                                          <span class="profile-status offline pull-right"></span>
-                                      </span>
-                                      <div class="mail-contnet">
-                                          <h5 class="message-title">Pavan kumar</h5>
-                                          <span class="mail-desc">Just see the my admin!</span>
-                                          <span class="time">9:02 AM</span>
-                                      </div>
-                                  </a>
+
                               </div>
                           </li>
                           <li>
                               <a class="nav-link text-center link" href="javascript:void(0);">
-                                  <b>See all e-Mails</b>
+                                  <b>See all messages</b>
                                   <i class="fa fa-angle-right"></i>
                               </a>
                           </li>
@@ -208,7 +143,7 @@
               <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" href="" data-toggle="dropdown" aria-haspopup="true"
                       aria-expanded="false">
-                      <img src="assets/images/users/1.jpg" alt="user" class="rounded-circle" width="31">
+                      <img src="{{user.img}}" alt="user" class="rounded-circle" width="30">
                   </a>
                   <div class="dropdown-menu dropdown-menu-right user-dd animated flipInY">
                       <span class="with-arrow">
@@ -216,11 +151,11 @@
                       </span>
                       <div class="d-flex no-block align-items-center p-15 bg-primary text-white m-b-10">
                           <div class="">
-                              <img src="assets/images/users/1.jpg" alt="user" class="img-circle" width="60">
+                              <img src="{{user.img}}" alt="user" class="img-circle" width="60">
                           </div>
                           <div class="m-l-10">
-                              <h4 class="m-b-0">Steave Jobs</h4>
-                              <p class=" m-b-0">varun@gmail.com</p>
+                              <h4 class="m-b-0">{{user.name}}</h4>
+                              <p class=" m-b-0">{{user.email}}</p>
                           </div>
                       </div>
                       <a class="dropdown-item" href="javascript:void(0)">
