--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -16,7 +16,7 @@
 **********************************************************/
 
 /*********************** 1 DASHBOARD *****************************/
-html, body {
+/* html, body {
 	font-family: 'Open Sans', sans-serif;
 	height: 100%;
 	text-rendering: optimizeLegibility;
@@ -182,7 +182,7 @@ html, body {
 .user li a {
 	font-size: 11px;
 	font-weight: 700;
-	color: #07253F !important; 
+	color: #07253F !important;
 	padding: 15px;
 }
 .user li a i {
@@ -392,7 +392,7 @@ html, body {
 }
 
 
-/************************ 2. SIDE MENU ***************************/
+//************************ 2. SIDE MENU **************************
 .parent-wrapper{
      padding-left: 0;
     -webkit-transition: all 0.5s ease;
@@ -522,7 +522,7 @@ html, body {
 		padding: 0;
 	}
 }
-/*********************** 3. DASHBOARD STATS *********************************/
+//*********************** 3. DASHBOARD STATS *********************************
 .dashboard-stats .stats {
 	padding: 0 15px 10px;
 }
@@ -606,7 +606,7 @@ html, body {
 	}
 }
 
-/***********************  USER DETAILS ********************************/
+/***********************  USER DETAILS *******************************
 .profile-intro {
 	border-bottom: 1px solid #eee;
 	padding-bottom: 15px;
@@ -637,7 +637,7 @@ html, body {
 	margin-bottom: 0;
 }
 
-/*************************  CHART STYLES  ***************************/
+/*************************  CHART STYLES  **************************
 .chart-item {
 	padding: 20px 20px 30px;
 }
@@ -674,7 +674,7 @@ html, body {
 .item-header {
 	padding: 0 0 15px;
 	border-bottom: 1px solid #eee;
-} 	
+}
 .item-header h6 {
 	margin: 0;
 	font-weight: 700;
@@ -689,7 +689,7 @@ html, body {
 	color: #81878C;
 }
 
-/****************************** Datatable styles ****************************/
+/****************************** Datatable styles ***************************
 .dash-search-form label {
 	display: block;
 	color: #81878C;
@@ -785,7 +785,7 @@ table.dataTable thead th {
     position: relative;
     background-image: none !important;
 }
- 
+
 table.dataTable thead th.sorting:after,
 table.dataTable thead th.sorting_asc:after,
 table.dataTable thead th.sorting_desc:after {
@@ -867,7 +867,7 @@ table.dataTable > tbody > tr.child span.dtr-title i {
 		margin-top: 42px;
 	}
 }
-/******************** datepicker style *******************************/
+/******************** datepicker style ******************************
 .ui-datepicker {
 	border: 1px solid #eee;
 	background: #fff;
@@ -911,7 +911,7 @@ table.dataTable > tbody > tr.child span.dtr-title i {
 }
 .ui-datepicker-current-day {
 	border: 1px solid #eee;
-}
+} */
 
 
 
@@ -5865,7 +5865,7 @@ button.close {
   .bs-popover-top .arrow::before, .bs-popover-auto[x-placement^="top"] .arrow::before {
     bottom: 0;
     border-top-color: rgba(0, 0, 0, 0.25); }
-  
+
   .bs-popover-top .arrow::after,
   .bs-popover-auto[x-placement^="top"] .arrow::after {
     bottom: 1px;
@@ -5885,7 +5885,7 @@ button.close {
   .bs-popover-right .arrow::before, .bs-popover-auto[x-placement^="right"] .arrow::before {
     left: 0;
     border-right-color: rgba(0, 0, 0, 0.25); }
-  
+
   .bs-popover-right .arrow::after,
   .bs-popover-auto[x-placement^="right"] .arrow::after {
     left: 1px;
@@ -5902,7 +5902,7 @@ button.close {
   .bs-popover-bottom .arrow::before, .bs-popover-auto[x-placement^="bottom"] .arrow::before {
     top: 0;
     border-bottom-color: rgba(0, 0, 0, 0.25); }
-  
+
   .bs-popover-bottom .arrow::after,
   .bs-popover-auto[x-placement^="bottom"] .arrow::after {
     top: 1px;
@@ -5931,7 +5931,7 @@ button.close {
   .bs-popover-left .arrow::before, .bs-popover-auto[x-placement^="left"] .arrow::before {
     right: 0;
     border-left-color: rgba(0, 0, 0, 0.25); }
-  
+
   .bs-popover-left .arrow::after,
   .bs-popover-auto[x-placement^="left"] .arrow::after {
     right: 1px;
@@ -8289,7 +8289,7 @@ a.text-light-warning:hover, a.text-light-warning:focus {
     border: 1px solid #dee2e6 !important; } }
 
 /*******************
-Padding margin property 
+Padding margin property
 *******************/
 html[dir="ltr"] body .m-t-5 {
   margin-top: 5px; }
@@ -8639,8 +8639,8 @@ html[dir="ltr"] body .p-l-0 {
 #main-wrapper[data-layout='vertical'] .left-sidebar[data-sidebarbg='skin1'] .sidebar-nav > ul > li.selected > a, #main-wrapper[data-layout='vertical'] .left-sidebar[data-sidebarbg='skin2'] .sidebar-nav > ul > li.selected > a, #main-wrapper[data-layout='vertical'] .left-sidebar[data-sidebarbg='skin3'] .sidebar-nav > ul > li.selected > a, #main-wrapper[data-layout='vertical'] .left-sidebar[data-sidebarbg='skin4'] .sidebar-nav > ul > li.selected > a {
   background: #343a40; }
 
-/*============================================================== 
- For all pages 
+/*==============================================================
+ For all pages
  ============================================================== */
 #main-wrapper {
   width: 100%;
@@ -12716,7 +12716,7 @@ label {
 
 html[dir="rtl"] {
   /*******************
-Padding margin property 
+Padding margin property
 *******************/
   /** * Zero */
   /* Stickey inner-left-part */
@@ -14830,24 +14830,24 @@ Author: Wrappixel
 
 File: scss
 */
-/*============================================================== 
- For Desktop & above all (1650px) 
+/*==============================================================
+ For Desktop & above all (1650px)
  ============================================================== */
-/*============================================================== 
- For Laptop & above all (1370px) 
+/*==============================================================
+ For Laptop & above all (1370px)
  ============================================================== */
-/*-- ============================================================== 
- Small Desktop & above all (1024px) 
+/*-- ==============================================================
+ Small Desktop & above all (1024px)
  ============================================================== */
-/*-- ============================================================== 
- Ipad & above all(768px) 
+/*-- ==============================================================
+ Ipad & above all(768px)
  ============================================================== */
 @media (min-width: 768px) {
   .bc-content {
     justify-content: flex-end; } }
 
-/*-- ============================================================== 
- Phone and below ipad(767px) 
+/*-- ==============================================================
+ Phone and below ipad(767px)
  ============================================================== */
 @media (max-width: 991.98px) {
   .do-block {
