--- a/src/app/components/location/location.component.html
+++ b/src/app/components/location/location.component.html
@@ -1,4 +1,6 @@
 <div class="container">
+    <div class="card shadow my-4">
+        <div class="card-header border-0">
     <div class="row" style="margin-top: 30px;">
       <div class="col-9">
         <h3>Student Locations</h3>
@@ -8,16 +10,15 @@
       </div>
     </div>
   </div>
-    <hr>
 
-    <div class="container">
-        <table class="table table-bordered text-center">
-            <thead>
+    <div class="table-responsive">
+        <table class="table align-items-center table-flush text-center">
+            <thead class="thead-light">
               <tr>
-                <th>Avatar</th>
-                <th (click)="sort('name')"><a href="javascript:void(0)" style="color:black">Name <span *ngIf="sortData.col=='name'"><i class="fa fa-caret-down" *ngIf="sortData.order=='asc'"></i><i class="fa fa-caret-up" *ngIf="sortData.order=='desc'"></i></span></a></th>
-                <th>Last Updated at</th>
-                <th>View Location</th>
+                <th scope="col">Avatar</th>
+                <th scope="col" (click)="sort('name')"><a href="javascript:void(0)" style="color:black">Name <span *ngIf="sortData.col=='name'"><i class="fa fa-caret-down" *ngIf="sortData.order=='asc'"></i><i class="fa fa-caret-up" *ngIf="sortData.order=='desc'"></i></span></a></th>
+                <th scope="col">Last Updated at</th>
+                <th scope="col">View Location</th>
               </tr>
             </thead>
             <tbody>
@@ -33,6 +34,8 @@
               </tr>
             </tbody>
           </table>
+    </div>
+  </div>
           <div class="col-12 justify-content-center" style="display: flex !important; justify-content: center !important;">
             <ngb-pagination [(collectionSize)]="pagination.max" (pageChange)="paginateClick($event)" [(page)]="pagination.page" ></ngb-pagination>
           </div>
