--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div class="table-responsive">
-      <table class="table align-items-center table-flush">
+      <table class="table align-items-center table-flush text-center">
           <thead class="thead-light">
             <tr>
               <th scope="col">Avatar</th>
