--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -33,7 +33,7 @@
                     <span class="h2 font-weight-bold mb-0">350,897</span>
                   </div>
                   <div class="col-auto">
-                    <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                    <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
                       <i class="fas fa-chalkboard-teacher"></i>
                     </div>
                   </div>
@@ -53,7 +53,7 @@
                     <span class="h2 font-weight-bold mb-0">350,897</span>
                   </div>
                   <div class="col-auto">
-                    <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                    <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
                       <i class="fas fa-user"></i>
                     </div>
                   </div>
@@ -73,7 +73,7 @@
                     <span class="h2 font-weight-bold mb-0">350,897</span>
                   </div>
                   <div class="col-auto">
-                    <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                    <div class="icon icon-shape bg-info text-white rounded-circle shadow">
                       <i class="fas fa-wallet"></i>
                     </div>
                   </div>
@@ -95,7 +95,7 @@
                     <span class="h2 font-weight-bold mb-0">350,897</span>
                   </div>
                   <div class="col-auto">
-                    <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                    <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
                       <i class="fas fa-book"></i>
                     </div>
                   </div>
@@ -115,7 +115,7 @@
                     <span class="h2 font-weight-bold mb-0">350,897</span>
                   </div>
                   <div class="col-auto">
-                    <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                    <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
                       <i class="fas fa-network-wired"></i>
                     </div>
                   </div>
@@ -135,7 +135,7 @@
                     <span class="h2 font-weight-bold mb-0">350,897</span>
                   </div>
                   <div class="col-auto">
-                    <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                    <div class="icon icon-shape bg-info text-white rounded-circle shadow">
                       <i class="fas fa-users"></i>
                     </div>
                   </div>
@@ -177,7 +177,7 @@
                     <span class="h2 font-weight-bold mb-0">350,897</span>
                   </div>
                   <div class="col-auto">
-                    <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                    <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
                       <i class="fas fa-calendar-alt"></i>
                     </div>
                   </div>
@@ -197,7 +197,7 @@
                     <span class="h2 font-weight-bold mb-0">350,897</span>
                   </div>
                   <div class="col-auto">
-                    <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                    <div class="icon icon-shape bg-info text-white rounded-circle shadow">
                       <i class="fas fa-bullhorn"></i>
                     </div>
                   </div>
@@ -237,7 +237,7 @@
                     <span class="h2 font-weight-bold mb-0">350,897</span>
                   </div>
                   <div class="col-auto">
-                    <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                    <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
                       <i class="fas fa-location-arrow"></i>
                     </div>
                   </div>
