--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -6,7 +6,7 @@
           <div class="col-lg-3 order-lg-2">
             <div class="card-profile-image">
               <a href="#">
-                <img src="{{user.img}}" class="rounded-circle">
+                <img src="{{user.avatar_url}}" class="rounded-circle">
               </a>
             </div>
           </div>
@@ -22,7 +22,7 @@
               <i class="ni location_pin mr-2"></i>{{user.address}}
             </div>
             <div class="h5 mt-4">
-              <i class="ni business_briefcase-24 mr-2"></i>{{user.role}}
+              <i class="ni business_briefcase-24 mr-2"></i>{{role}}
             </div>
             <div>
               <i class="ni education_hat mr-2"></i>{{user.school}}
@@ -41,34 +41,34 @@
           </div>
         </div>
         <div class="card-body">
-          <form>
+          <div class="alert alert-danger" [hidden]="!error.name">
+            {{ error.name }}
+          </div>
+          <div class="alert alert-danger" [hidden]="!error.email">
+            {{ error.email }}
+          </div>
+          <form #userForm=ngForm>
             <h6 class="heading-small text-muted mb-4">User information</h6>
             <div class="pl-lg-4">
               <div class="row">
                 <div class="col-lg-6">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-username">Username</label>
-                    <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Username" value="lucky.jesse">
+                    <label class="form-control-label" for="input-email">Email address</label>
+                    <input type="email" name="email" id="input-email" class="form-control form-control-alternative" placeholder="Enter Email" value="{{user.email}}" required [(ngModel)]="user.email">
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-email">Email address</label>
-                    <input type="email" id="input-email" class="form-control form-control-alternative" placeholder="jesse@example.com">
+                    <label class="form-control-label" for="input-created_at">Registered at</label>
+                    <input type="name" id="input-created_at" class="form-control form-control-alternative" placeholder="Select Registered Date" value="{{date}}" disabled>
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="col-lg-6">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-first-name">First name</label>
-                    <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="First name" value="Lucky">
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="form-group">
-                    <label class="form-control-label" for="input-last-name">Last name</label>
-                    <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Last name" value="Jesse">
+                    <label class="form-control-label" for="input-name">Name</label>
+                    <input type="text" name="name" id="input-name" class="form-control form-control-alternative" placeholder="Enter Name" value="{{user.name}}" required [(ngModel)]="user.name">
                   </div>
                 </div>
               </div>
@@ -81,27 +81,7 @@
                 <div class="col-md-12">
                   <div class="form-group">
                     <label class="form-control-label" for="input-address">Address</label>
-                    <input id="input-address" class="form-control form-control-alternative" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09" type="text">
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  <div class="form-group">
-                    <label class="form-control-label" for="input-city">City</label>
-                    <input type="text" id="input-city" class="form-control form-control-alternative" placeholder="City" value="New York">
-                  </div>
-                </div>
-                <div class="col-lg-4">
-                  <div class="form-group">
-                    <label class="form-control-label" for="input-country">Country</label>
-                    <input type="text" id="input-country" class="form-control form-control-alternative" placeholder="Country" value="United States">
-                  </div>
-                </div>
-                <div class="col-lg-4">
-                  <div class="form-group">
-                    <label class="form-control-label" for="input-country">Postal code</label>
-                    <input type="number" id="input-postal-code" class="form-control form-control-alternative" placeholder="Postal code">
+                    <input id="input-address" name="address" class="form-control form-control-alternative" placeholder="Enter Address" [(ngModel)]="user.address" value="{{user.address}}" type="text" required>
                   </div>
                 </div>
               </div>
@@ -112,8 +92,11 @@
             <div class="pl-lg-4">
               <div class="form-group">
                 <label>About Me</label>
-                <textarea rows="4" class="form-control form-control-alternative" placeholder="A few words about you ...">A beautiful Dashboard for Bootstrap 4. It is Free and Open Source.</textarea>
+                <textarea rows="4" name="about" class="form-control form-control-alternative" placeholder="Eneter Introduction about you..." [(ngModel)]="user.about">{{user.about}}</textarea>
               </div>
+            </div>
+            <div class="float-right">
+              <button type="submit" class="btn btn-info" [disabled]="!userForm.valid" (click)='submit()'>Save</button>
             </div>
           </form>
         </div>
