--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -180,7 +180,7 @@
                               </div>
                           </div>
                       </div>
-                      <a routerLink="/classes">
+                      <a routerLink="/class">
                           <div class="footer">
                           <hr />
                           <div class="stats">
