--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -29,7 +29,7 @@
 
               <li class="nav-small-cap">
                   <i class="mdi mdi-dots-horizontal"></i>
-                  <span class="hide-menu">Acadamic</span>
+                  <span class="hide-menu">Academic</span>
               </li>
               <li class="sidebar-item">
                   <a class="sidebar-link waves-effect waves-dark" href="javascript:void(0)" routerLink="/streams">
