--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
         <!-- Card stats -->
         <div class="row pt-5" *ngIf="isAdmin || isTeacher">
           <div class="col-xl-3 col-md-6">
-            <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
                   <div class="col">
@@ -25,7 +25,7 @@
             </div>
           </div>
           <div class="col-xl-3 col-md-6">
-            <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
                   <div class="col">
@@ -45,7 +45,7 @@
             </div>
           </div>
           <div class="col-xl-3 col-md-6">
-            <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
                   <div class="col">
@@ -65,7 +65,7 @@
             </div>
           </div>
           <div class="col-xl-3 col-md-6">
-            <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
                   <div class="col">
@@ -87,7 +87,7 @@
         </div>
         <div class="row pt-5">
           <div class="col-xl-3 col-md-6">
-            <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
                   <div class="col">
@@ -107,7 +107,7 @@
             </div>
           </div>
           <div class="col-xl-3 col-md-6">
-            <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
                   <div class="col">
@@ -127,7 +127,7 @@
             </div>
           </div>
           <div class="col-xl-3 col-md-6">
-            <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
                   <div class="col">
@@ -147,7 +147,7 @@
             </div>
           </div>
           <div class="col-xl-3 col-md-6">
-            <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
                   <div class="col">
@@ -169,7 +169,7 @@
         </div>
         <div class="row pt-5">
           <div class="col-xl-3 col-md-6">
-            <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
                   <div class="col">
@@ -189,7 +189,7 @@
             </div>
           </div>
           <div class="col-xl-3 col-md-6">
-            <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
                   <div class="col">
@@ -209,7 +209,7 @@
             </div>
           </div>
           <div class="col-xl-3 col-md-6">
-            <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
                   <div class="col">
@@ -229,7 +229,7 @@
             </div>
           </div>
           <div class="col-xl-3 col-md-6">
-            <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
                   <div class="col">
