--- a/src/app/components/location-map/location-map.component.html
+++ b/src/app/components/location-map/location-map.component.html
@@ -1,1 +1,7 @@
-<div #gmap style="width:100%;height:500px"></div>
+<div class="container my-4">
+  <div class="card shadow">
+    <div class="">
+      <div #gmap style="width:100%;height:500px"></div>
+    </div>
+  </div>
+</div>
