--- a/src/app/components/attendance/attendance.component.html
+++ b/src/app/components/attendance/attendance.component.html
@@ -1,4 +1,4 @@
-<div class="container my-4">
+<div class="container my-4" *ngIf="stuAtt">
   <div class="card shadow">
     <div class="card-body">
       <div class="row text-center">
