--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -5,7 +5,7 @@
               <i class="ti-menu ti-close"></i>
           </a>
 
-          <a class="navbar-brand" href="/" style="background: #3d3d3d;">
+          <a class="navbar-brand" [routerLink]="['/']" style="background: #3d3d3d;">
               <b class="logo-icon">
                   <img src="assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
               </b>
