--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -228,7 +228,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-6">
+          <div class="col-xl-3 col-md-6" *ngIf="isParent">
             <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
