--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -69,3 +69,41 @@
     </div>
   </div>
 </div>
+
+<!-- The Modal -->
+<div id="addModal" class="modal" style="background-color: rgb(0,0,0); background-color: rgba(0,0,0,0.4);">
+
+  <div class="modal-dialog" permission="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Choose Student</h5>
+        <button type="button" class="close" (click)='closeAddModal()'>
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form #editPermissionForm=ngForm>
+
+            <div class="form-group">
+                <div class="row">
+                  <div class='col-6'>
+                    <label for="student">Student</label>
+                  </div>
+                  <div class='col-6'>
+                    <select name="student" [(ngModel)]="name" required>
+                      <option *ngFor="let st of students" value="{{ st.id }}">{{ st.indexNo }} - {{ st.user.name }}</option>
+                    </select>
+                </div>
+              </div>
+            </div>
+
+        </form>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" (click)='addModalSubmit()' [disabled]="!editPermissionForm.valid">Save changes</button>
+        <button type="button" class="btn btn-secondary" (click)='closeAddModal()'>Close</button>
+      </div>
+    </div>
+  </div>
+</div>
